--- a/ZoomLinkKeeper/Base.lproj/Main.storyboard
+++ b/ZoomLinkKeeper/Base.lproj/Main.storyboard
@@ -41,30 +41,39 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Copy Zoom link from Canvas..." textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="dDP-pj-d3p">
-                                                    <rect key="frame" x="0.0" y="39" width="912" height="34"/>
+                                                    <rect key="frame" x="0.0" y="39" width="866" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                     <connections>
-                                                        <action selector="valueChanged:" destination="bi0-ax-5CZ" eventType="valueChanged" id="IkP-uM-jc9"/>
+                                                        <action selector="save:" destination="bi0-ax-5CZ" eventType="editingDidEnd" id="HkT-yN-h3s"/>
                                                     </connections>
                                                 </textField>
-                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LQX-df-3At">
+                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LQX-df-3At">
                                                     <rect key="frame" x="920" y="41" width="64" height="30"/>
                                                     <state key="normal" title="Paste 🍝"/>
                                                     <connections>
                                                         <action selector="pasta:" destination="bi0-ax-5CZ" eventType="touchUpInside" id="fwz-fF-kq8"/>
                                                     </connections>
                                                 </button>
+                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bCS-T7-48r">
+                                                    <rect key="frame" x="874" y="41" width="36" height="30"/>
+                                                    <state key="normal" title="Clear"/>
+                                                    <connections>
+                                                        <action selector="clear:" destination="bi0-ax-5CZ" eventType="touchUpInside" id="yQv-Z3-KK5"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="LQX-df-3At" secondAttribute="trailing" id="2GV-mn-B6h"/>
+                                                <constraint firstItem="bCS-T7-48r" firstAttribute="top" secondItem="BiX-lu-1lN" secondAttribute="bottom" constant="10" id="Buk-Rl-4eB"/>
                                                 <constraint firstAttribute="trailing" secondItem="BiX-lu-1lN" secondAttribute="trailing" id="Ks3-ML-emx"/>
+                                                <constraint firstItem="LQX-df-3At" firstAttribute="leading" secondItem="bCS-T7-48r" secondAttribute="trailing" constant="10" id="MWt-vC-Ec8"/>
                                                 <constraint firstItem="LQX-df-3At" firstAttribute="top" secondItem="BiX-lu-1lN" secondAttribute="bottom" constant="10" id="Thq-Ro-lPD"/>
                                                 <constraint firstItem="dDP-pj-d3p" firstAttribute="top" secondItem="BiX-lu-1lN" secondAttribute="bottom" constant="8" symbolic="YES" id="aD4-0h-mEK"/>
                                                 <constraint firstItem="dDP-pj-d3p" firstAttribute="leading" secondItem="EXi-Lt-gc8" secondAttribute="leading" id="bST-J5-7qu"/>
                                                 <constraint firstItem="BiX-lu-1lN" firstAttribute="top" secondItem="EXi-Lt-gc8" secondAttribute="top" constant="10" id="if7-1k-U57"/>
                                                 <constraint firstItem="BiX-lu-1lN" firstAttribute="leading" secondItem="EXi-Lt-gc8" secondAttribute="leading" id="kEE-Eh-geA"/>
-                                                <constraint firstItem="LQX-df-3At" firstAttribute="leading" secondItem="dDP-pj-d3p" secondAttribute="trailing" constant="8" symbolic="YES" id="naI-R3-hg5"/>
+                                                <constraint firstItem="bCS-T7-48r" firstAttribute="leading" secondItem="dDP-pj-d3p" secondAttribute="trailing" constant="8" symbolic="YES" id="mI8-jk-z6w"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
